--- a/example/package.json
+++ b/example/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "electron-example",
+  "name": "electron-quick-start",
   "version": "1.0.0",
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "watch": "nodemon --watch . --exec electron ."
+    "start": "electron ."
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
