--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "watch": "nodemon --watch . --exec electron ."
+    "watch": "nodemon --watch . --exec electron .",
+    "dist": "electron-builder"
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
@@ -18,7 +19,8 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^13.1.9"
+    "electron": "^13.1.9",
+    "electron-builder": "^22.11.7"
   },
   "dependencies": {
     "clipboard": "^2.0.8",
@@ -28,5 +30,33 @@
     "mousetrap": "^1.6.5",
     "mousetrap-global-bind": "^1.1.0",
     "timer.js": "^1.0.4"
+  },
+  "build": {
+    "appId": "org.zulip.zulip-electron",
+    "category": "Chat;GNOME;GTK;Network;InstantMessaging",
+    "dmg": {
+      "contents": [
+        {
+          "x": 110,
+          "y": 150
+        },
+        {
+          "x": 240,
+          "y": 150,
+          "type": "link",
+          "path": "/Applications"
+        }
+      ]
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb"
+      ]
+    },
+    "win": {
+      "target": "squirrel",
+      "icon": "build/icon.ico"
+    }
   }
 }
